# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  Readme.md
module_1_assignment/include/: task3.hpp
module_1_assignment/src/: task1.cpp  task2.cpp  task3.cpp
module_2_assignment/: CMakeLists.txt  Readme.md  package.xml
module_2_assignment/launch/: task1.launch.py  task3.launch.py  task4.launch.py
module_2_assignment/src/: task1_1.cpp  task1_2.cpp  task3.cpp  task4.cpp
